[package]
name = "rustelbrot"
version = "0.1.1"
authors = ["Faras <faras@faras.me>"]
edition = "2018"

[dependencies]
palette = "0.2"
# png = "0.9.0"
cairo-rs = { version = "0.2.0", features = ["png"] }
kiss3d = "0.30"
nalgebra = "0.25.0"
ncollide3d = "0.28.0"
clap = { version = "2.29.1", features = ["yaml"] }
#
# [dependencies.gtk]
# version = "0.2.0"
# features = ["v3_10"]

[[bin]]
name = "rustelbrot"
path = "src/rustelbrot.rs"
